# chats

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _find_models.sh  _test_api.sh  mode.md  models.md  project.md  pyproject.toml  read.md  tmp_test_parse.py
app/: __init__.py  main.py
app/api/: admin_console.py  chat_ui.py  deps.py  router.py
app/core/: config.py  constants.py  db.py  exceptions.py  lifecycle.py  logging.py  payment_utils.py  redis.py  security.py
app/models/: __init__.py  auth_session.py  conversation.py  message.py  model_node.py  payment_order.py  plan.py  subscription.py  user.py
app/providers/: __init__.py  base.py  openai_compat.py
app/repos/: __init__.py  auth_session_repo.py  conversation_repo.py  message_repo.py  model_node_repo.py  payment_order_repo.py  plan_repo.py  subscription_repo.py  user_repo.py
app/schemas/: admin.py  auth.py  chat.py  conversation.py  payment.py  user.py  (+1 more)
docs_and_notes/: BUG_TRACKER.md  LESSONS_LEARNED.md  PROGRESS.md  README_PROJECT.md  SEARCH_ARCHITECTURE_2026-04-22.md  SKILLS_REFINEMENT.md  TELEGRAM_BRIDGE_2026-04-21.md  USER_GUIDE.md
migrations/: env.py
scripts/: generate_telegram_session.py
tests/: test_captcha_solver.py  test_chat_schema.py  test_chat_service.py  test_conversation_schema.py  test_health.py  test_openai_compat_provider.py  test_payment_service.py  test_phone_number_service.py  test_qiandu_local_tools.py  test_qiandu_search_service.py  test_telegram_bridge_service.py  test_telegram_parse_service.py  test_telegram_userbot_manager.py  test_web_search_service.py
(+49 files in other folders)
